# Claude-ast-index-search

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  USER_GUIDE.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: fork-workflow.md
.cursor-plugin/: marketplace.json
.github/workflows/: release.yml
benches/: db_query.rs  index_build.rs  parser_bench.rs
crates/ast-index-mcp/src/: format.rs  main.rs
docs/: mcp-setup.md  setup-guide.md
npm/: package.json
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/.cursor-plugin/: plugin.json
plugin/commands/: initialize-web.md
plugin/commands-cursor/: initialize-ast-index.md
plugin/rules/: ast-index.mdc
scripts/: bump.sh  validate-agent-plugins.sh
src/: db.rs  encoding.rs  indexer.rs  lib.rs  main.rs
src/commands/: analysis.rs  android.rs  files.rs  grep.rs  index.rs  ios.rs  management.rs  mod.rs  modules.rs  perl.rs  project_info.rs  watch.rs
src/parsers/: mod.rs  perl.rs  typescript.rs  wsdl.rs
src/parsers/treesitter/: bash.rs  bsl.rs  common_lisp.rs  cpp.rs  csharp.rs  css.rs  dart.rs  elixir.rs  gdscript.rs  go.rs  groovy.rs  java.rs  kotlin.rs  less.rs  lua.rs  matlab.rs  mod.rs  objc.rs  php.rs  proto.rs  python.rs  r_lang.rs  rust_lang.rs  scala.rs  scss.rs  sql.rs  swift.rs  typescript.rs
src/parsers/treesitter/queries/: cpp.scm  sql.scm
tests/: css_tests.rs  encoding_tests.rs  extra_root_collision_tests.rs  files_command_tests.rs  fixture_runner.rs  management_query_tests.rs  memory_tests.rs  module_route_tests.rs  path_resolver_tests.rs  update_extra_roots_tests.rs
