[workspace]
members = [".", "crates/ast-index-mcp"]
# Only build the root `ast-index` binary with `cargo build` by default.
# MCP crate is opt-in: `cargo build -p ast-index-mcp`.
# This keeps existing release pipelines (release.yml, Arcadia IX, homebrew,
# npm, ya tool upload) unchanged — they all run plain `cargo build --release`
# and produce a single `ast-index` binary as before.
default-members = ["."]

[package]
name = "ast-index"
version = "3.44.0"
edition = "2021"
description = "Fast code search for Android/Kotlin/Java, iOS/Swift/ObjC, Dart/Flutter, Scala, PHP, Perl, Python, Go, C++, and Protocol Buffers projects"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Fast file search (ripgrep internals)
ignore = "0.4"
regex = "1"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

# SQLite + FTS5
rusqlite = { version = "0.31", features = ["bundled"] }

# Encoding detection + decoding for non-UTF-8 source files (CP1251 etc.)
encoding_rs = "0.8"
chardetng = "0.1"

# Utilities
walkdir = "2"
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
rayon = "1"
notify = "7"
notify-debouncer-mini = "0.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Tree-sitter AST parsing
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-dart = "0.2.0"
tree-sitter-objc = "3.0"
tree-sitter-proto = "0.4"
tree-sitter-scala = "0.24"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-elixir = "0.3"
tree-sitter-bash = "0.25"
tree-sitter-sql = "0.0.2"
tree-sitter-groovy = "0.1"
tree-sitter-r = "1.2"
tree-sitter-matlab = "1.3"
fs2 = "0.4.3"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-gdscript = "6.1"
tree-sitter-zig = "1.1"
tree-sitter-css = "0.25"
tree-sitter-scss = "1.0"
tree-sitter-less = "1.0"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
libtest-mimic = "0.7"

[[test]]
name = "fixture_runner"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "db_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "db_query"
harness = false

[[bench]]
name = "index_build"
harness = false

[patch.crates-io]
# Published tree-sitter-scss 1.0.0 (2024-04-09) hardcodes `-Wno-unused-parameter`
# in build.rs, which MSVC `cl.exe` rejects (`error D8021`). Upstream master has
# the platform-conditional fix (2024-04-26 commit 9ab738d) but never cut a
# 1.0.1. Pin to a recent master SHA so Windows release builds compile.
tree-sitter-scss = { git = "https://github.com/tree-sitter-grammars/tree-sitter-scss", rev = "2ef6d42e3ad7a8208900f9346f4529806ae0f9f9" }

[profile.release]
lto = true
codegen-units = 1
strip = true
